[gd_scene load_steps=7 format=3 uid="uid://w5fi40sdodiv"]

[ext_resource type="Script" uid="uid://bd581dor46s4v" path="res://entities/player/player_merged.gd" id="1_ceemt"]
[ext_resource type="PackedScene" uid="uid://cpmp45bvptfux" path="res://entities/Animated-3D-Robot/Blend/Robot.blend" id="2_u7xfr"]
[ext_resource type="AnimationNodeBlendTree" uid="uid://xrph22dtmo0l" path="res://entities/player/animation_tree.tres" id="3_6bm6j"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ceemt"]
friction = 0.0

[sub_resource type="Curve" id="Curve_u7xfr"]
_limits = [0.0, 25.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 25), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pwfib"]

[node name="RigidBody3D" type="RigidBody3D" node_paths=PackedStringArray("mesh")]
mass = 0.1
physics_material_override = SubResource("PhysicsMaterial_ceemt")
lock_rotation = true
script = ExtResource("1_ceemt")
horizontalAccelerationCurve = SubResource("Curve_u7xfr")
mesh = NodePath("MeshParent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_pwfib")

[node name="MeshParent" type="Marker3D" parent="."]

[node name="PlayerGroundCast" type="RayCast3D" parent="MeshParent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.970849, 0)
target_position = Vector3(0, -0.5, 0)
debug_shape_custom_color = Color(1, 0, 1, 1)
debug_shape_thickness = 5

[node name="Robot" parent="MeshParent" instance=ExtResource("2_u7xfr")]
transform = Transform3D(-1.87959e-08, 0, 0.43, 0, 0.43, 0, -0.43, 0, -1.87959e-08, 0, -0.984005, 0)

[node name="Skeleton3D" parent="MeshParent/Robot/RobotArmature" index="0"]
bones/1/position = Vector3(0.636722, 0.385992, -0.0108031)
bones/1/rotation = Quaternion(-2.11267e-08, 0.580428, 0.814312, 8.14992e-08)
bones/2/position = Vector3(0.011941, 1.43169, 0.307804)
bones/2/rotation = Quaternion(-0.00202257, 0.00912414, 0.00349371, 0.99995)
bones/6/rotation = Quaternion(-0.0419796, -0.0219707, 0.0178273, 0.998718)
bones/7/position = Vector3(-5.53082e-09, 0.309866, -5.59071e-09)
bones/7/rotation = Quaternion(-0.0260781, -0.0161805, -0.00109746, 0.999528)
bones/8/position = Vector3(0.582738, 0.29672, 0.0324413)
bones/8/rotation = Quaternion(-0.0114497, -0.0532471, -0.9762, 0.209923)
bones/9/rotation = Quaternion(-0.021128, -0.708004, 0.0344153, 0.705053)
bones/10/rotation = Quaternion(0.316139, 0.488953, -0.376566, 0.720541)
bones/12/rotation = Quaternion(-0.00442111, 0.0238239, -0.552072, 0.833444)
bones/13/rotation = Quaternion(-0.0381108, 0.000934134, -0.699656, 0.713462)
bones/14/rotation = Quaternion(0.729874, 0.635341, 0.211089, 0.13808)
bones/15/rotation = Quaternion(-0.248974, 0.627184, 0.630886, -0.382928)
bones/17/rotation = Quaternion(0.0467353, -0.396111, -0.589061, 0.702794)
bones/18/rotation = Quaternion(-0.0425872, -0.0183796, -0.699962, 0.712672)
bones/20/rotation = Quaternion(-0.0680167, 0.483185, -0.584014, 0.648717)
bones/21/rotation = Quaternion(-0.0425873, -0.0183795, -0.699962, 0.712672)
bones/22/position = Vector3(-0.636816, 0.296747, 0.0324391)
bones/22/rotation = Quaternion(0.0112573, 0.000764749, 0.973895, 0.226716)
bones/23/rotation = Quaternion(-0.0555822, 0.75496, -0.0683072, 0.649831)
bones/24/rotation = Quaternion(0.157852, -0.632368, 0.367341, 0.663516)
bones/26/rotation = Quaternion(-0.0436784, -0.0103278, 0.525089, 0.849863)
bones/27/rotation = Quaternion(0.0348681, -0.0390055, 0.504719, 0.861697)
bones/28/rotation = Quaternion(0.669465, -0.587013, -0.279996, 0.358935)
bones/29/rotation = Quaternion(-0.135572, 0.735133, 0.594621, -0.296016)
bones/31/rotation = Quaternion(-0.504663, -0.573821, 0.135774, 0.630564)
bones/32/rotation = Quaternion(-0.0418692, -0.0120427, 0.527238, 0.8486)
bones/33/rotation = Quaternion(-0.115109, 0.858055, -0.363121, -0.344435)
bones/34/rotation = Quaternion(0.575219, 0.552901, 0.116743, 0.591435)
bones/35/rotation = Quaternion(0.138603, 0.024903, 0.427063, 0.893189)
bones/36/rotation = Quaternion(0.75626, 0.325485, -0.505838, 0.257407)
bones/36/scale = Vector3(0.999996, 1, 1.00002)
bones/37/rotation = Quaternion(0.635994, 8.3919e-08, -1.13974e-07, 0.771694)
bones/38/rotation = Quaternion(0.784986, -0.0943658, 0.607265, 0.0782367)
bones/38/scale = Vector3(0.999998, 0.999998, 1.00002)
bones/39/rotation = Quaternion(0.215805, -2.98934e-07, 1.94535e-08, 0.976437)
bones/40/position = Vector3(2.75517, 2.65557, 0.837375)
bones/41/position = Vector3(-0.636881, 0.0292263, 0.0250877)
bones/41/rotation = Quaternion(5.22173e-07, 0.69555, 0.718478, 6.32924e-07)
bones/42/position = Vector3(-3.02875, 2.42529, 0.859867)

[node name="CameraPivot" type="Node3D" parent="."]
top_level = true

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.26566, 9.06299)
current = true

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="LandingTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../MeshParent/Robot")
tree_root = ExtResource("3_6bm6j")
anim_player = NodePath("../MeshParent/Robot/AnimationPlayer")
parameters/Blend2/blend_amount = 0
parameters/OneShotBlend/active = 0.0
parameters/OneShotBlend/internal_active = 0.0
parameters/OneShotBlend/request = 0
parameters/StateMachine_upper/locomotion/BlendSpace1D/blend_position = -0.355
parameters/TimeScale/scale = 1.0

[editable path="MeshParent/Robot"]
